<resources>
    <!-- Sign-in status messages -->
    <string name="title_text">Sign In</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">166508510344-9fdl67e1h2drsg1sdv4m8ubfuunat2m2.apps.googleusercontent.com</string>


    <!--Main-->
    <string name="app_name">Hall Pass</string>
    <string name="settings">Settings</string>
    <string name="settings_1">Default Classroom View</string>
    <string name="settings_1_1">Alphabetical List</string>
    <string name="settings_1_2">Seating Chart</string>

    <!--Class Periods-->
    <string name="A1">A1</string>
    <string name="A2">A2</string>
    <string name="A3">A3</string>
    <string name="A4">A4</string>
    <string name="B1">B1</string>
    <string name="B2">B2</string>
    <string name="B3">B3</string>
    <string name="B4">B4</string>
    <string name="title_classroom">Classroom</string>

    <string name="name_student_default">
        Name of Student
    </string>

    <string name="under_construction">"This page is under construction\nPress the back button to return to previous screen"</string>

    <!--Student List-->
    <string name="add_student">Add Student</string>
    <string name="button_getStudents">Load Students From Google Sheets</string>
    <string name="button_toSM">Sheets Manager</string>
    <string name="toggle_off">IN</string>
    <string name="toggle_on">OUT</string>
    <string name="toggle_text">Hall Pass</string>

    <!--Sheets manager-->
    <string name="sm_title">"Sheets Manager: "</string>
    <string name="button_toMain">Back to Main</string>
    <string name="button_toClassroom">Classroom</string>
    <string name="how_to_get_id"><u>Example ID in bold</u>
        "\nhttps://docs.google.com/spreadsheets/d/<b>15VnNtPdH05Zx33vRVMn0v5RyjPf2gEcr0ygClDYrGDw</b>/edit?usp=sharing"
    </string>
    <string name="readSheet">
        "Below is the ID of the spreadsheet that you can load class rolls from."
        "\nEnsure the spreadsheet has last names in column 1 and first names in column 2."
    </string>
    <string name="readHint">ID of Read Spreadsheet</string>
    <string name="writeSheet"><b>REQUIRED</b>
        "\nBelow is the ID of the spreadsheet that data is written to when students are"
        "checked in and out in the classroom view."
    </string>
    <string name="writeHint">ID of Write Spreadsheet</string>
    <string name="sheetID">
        "If you are writing to the same spreadsheet for each class period but using different"
        "sheets within that spreadsheet for each class, specify here the name of that sheet."
    </string>
    <string name="sheetIDHint">Default is \'Sheet1\'</string>

    <string name="readTab">READ</string>
    <string name="writeTab">WRITE</string>

    <string name="button_saveChanges">Save Changes</string>

</resources>
