<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sheetsmanager.SheetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/sheets_small_margin"
            android:text="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/sheets_small_margin"
            android:text="@string/how_to_get_id" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="textImeMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/sheetID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/sheets_small_margin"
            android:text="@string/sheetID" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_sheetID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sheetIDHint"
                android:inputType="text|textImeMultiLine" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_saveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/sheets_small_margin"
        android:text="@string/button_saveChanges" />

</RelativeLayout>